# prover

./: .gitignore  configure.ac  prove
src/: Makefile.am  arith.c  arith.h  cnf.c  cnf.h  cnf_proof.c  comm.h  dpll.h  equal.c  equal.h  equal_proof.c  etree.c  etree.h  expr.lex.l  expr.tab.y  func.c  func.h  gamma.c  gamma.h  lemma.v  list.h  lit.c  lit.h  main.c  nnf.c  nnf.h  nnf_proof.c  pred.c  pred.h  proof.h  proof_helper.c  prove.c  prove_proof.c  prove_resolve.c  theory.h  trick_proof.c
src/dpll/: cnf.c  cnf_proof.c  dpll.h  equal.c  equal_proof.c  gamma.c  gamma.h  proof_utils.h  prove.c  prove_proof.c
src/naive_resolve/: prove.c  prove_proof.c
test/false/: f  s  s1  t  t10  t_dpll_uf20  t_dpll_uf50
test/false/arith/: t1  t2
test/true/: t1  t10  t2  t3  t4  t5  t6  t7  t8  t9  t_dpll  t_dpll_uuf50
test/true/arith/: h1  h2  h3  t1  t10  t11  t2  t3  t4  t5  t6  t7  t8  t9
test/true/equal/: t11  t12  t13  t14  t15  t16  uif1  uif2  uif3  uif4  uif5  uif6  uif7
tools/: cnf.c
